# echo-claude03

./: .gitignore  README.md  pyproject.toml
docs/guides/: __init__.py
echo_claude/: __init__.py  __main__.py  _write_tui.py  cli.py
echo_claude/config/: providers.py  settings.py
echo_claude/core/: agent.py  message.py  session.py  tools.py
echo_claude/providers/: __init__.py  anthropic.py  baidu.py  base.py  deepseek.py  local.py  moonshot.py  openai.py  zhipu.py
echo_claude/ui/: tui_ui.py
echo_claude/utils/: logger.py  prompts.py
examples/: config.example.yaml
tests/unit/: test_prompts.py  test_tools.py
